added basic layout of xaml window

--- a/January2020Exam/MainWindow.xaml
+++ b/January2020Exam/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:January2020Exam"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Activity Planner" Height="650" Width="1000" Loaded="MainWindow1_Loaded">
     <Grid>
-        
+        <ListBox x:Name="lstBxAllPlayers" HorizontalAlignment="Left" Height="250" Margin="205,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstbxAllActivities_SelectionChanged"/>
+        <ListBox x:Name="lstBxSelectedPlayers" HorizontalAlignment="Left" Height="250" Margin="655,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstBxSelectedActivities_SelectionChanged"/>
+        <Label x:Name="lblTitle" Content="Team App" HorizontalAlignment="Left" Margin="205,20,0,0" VerticalAlignment="Top" Width="250" Height="45" FontSize="24" Foreground="#FF617CDA" FontWeight="Bold"/>
+        <Label x:Name="lblAll" Content="All Players" HorizontalAlignment="Left" Margin="205,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16"/>
+        <Label x:Name="lblSelected" Content="Selected Players" HorizontalAlignment="Left" Margin="655,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16"/>
+        <Button x:Name="btnAdd" Content="Add &gt; &gt;" HorizontalAlignment="Left" Margin="500,185,0,0" VerticalAlignment="Top" Width="75" Click="btnRight_Click"/>
+        <Button x:Name="btnRemove" Content="&lt; &lt;Remove  " HorizontalAlignment="Left" Margin="500,255,0,0" VerticalAlignment="Top" Width="75" Click="btnLeft_Click"/>
+        <Label x:Name="lblSpaces" Content="Spaces" HorizontalAlignment="Left" Margin="200,445,0,0" VerticalAlignment="Top" Width="140" Height="30" FontSize="16"/>
+        <TextBlock x:Name="txtBlkSpaces" HorizontalAlignment="Left" Margin="380,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="150" FontSize="16"/>
+        <Label x:Name="lblFormation" Content="Formation" HorizontalAlignment="Left" Margin="200,65,0,0" VerticalAlignment="Top" Width="85" FontSize="16"/>
+        <ComboBox x:Name="cmbBxFormation" HorizontalAlignment="Left" Margin="300,70,0,0" VerticalAlignment="Top" Width="175"/>
+
     </Grid>
 </Window>
