--- a/January2020Exam/MainWindow.xaml
+++ b/January2020Exam/MainWindow.xaml
@@ -7,17 +7,22 @@
         mc:Ignorable="d"
         Title="Activity Planner" Height="650" Width="1000" Loaded="MainWindow1_Loaded">
     <Grid>
-        <ListBox x:Name="lstBxAllPlayers" HorizontalAlignment="Left" Height="250" Margin="205,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstbxAllActivities_SelectionChanged"/>
-        <ListBox x:Name="lstBxSelectedPlayers" HorizontalAlignment="Left" Height="250" Margin="655,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstBxSelectedActivities_SelectionChanged"/>
-        <Label x:Name="lblTitle" Content="Team App" HorizontalAlignment="Left" Margin="205,20,0,0" VerticalAlignment="Top" Width="250" Height="45" FontSize="24" Foreground="#FF617CDA" FontWeight="Bold"/>
-        <Label x:Name="lblAll" Content="All Players" HorizontalAlignment="Left" Margin="205,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16"/>
-        <Label x:Name="lblSelected" Content="Selected Players" HorizontalAlignment="Left" Margin="655,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16"/>
-        <Button x:Name="btnAdd" Content="Add &gt; &gt;" HorizontalAlignment="Left" Margin="500,185,0,0" VerticalAlignment="Top" Width="75" Click="btnRight_Click"/>
-        <Button x:Name="btnRemove" Content="&lt; &lt;Remove  " HorizontalAlignment="Left" Margin="500,255,0,0" VerticalAlignment="Top" Width="75" Click="btnLeft_Click"/>
-        <Label x:Name="lblSpaces" Content="Spaces" HorizontalAlignment="Left" Margin="200,445,0,0" VerticalAlignment="Top" Width="140" Height="30" FontSize="16"/>
-        <TextBlock x:Name="txtBlkSpaces" HorizontalAlignment="Left" Margin="380,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="150" FontSize="16"/>
-        <Label x:Name="lblFormation" Content="Formation" HorizontalAlignment="Left" Margin="200,65,0,0" VerticalAlignment="Top" Width="85" FontSize="16"/>
-        <ComboBox x:Name="cmbBxFormation" HorizontalAlignment="Left" Margin="300,70,0,0" VerticalAlignment="Top" Width="175"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="175*"/>
+            <ColumnDefinition Width="817*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="lstBxAllPlayers" HorizontalAlignment="Left" Height="250" Margin="30,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstbxAllPlayers_SelectionChanged" Grid.Column="1"/>
+        <ListBox x:Name="lstBxSelectedPlayers" HorizontalAlignment="Left" Height="250" Margin="480,125,0,0" VerticalAlignment="Top" Width="250" SelectionChanged="lstBxSelectedPlayers_SelectionChanged" Grid.Column="1"/>
+        <Label x:Name="lblTitle" Content="Team App" HorizontalAlignment="Left" Margin="30,20,0,0" VerticalAlignment="Top" Width="250" Height="45" FontSize="24" Foreground="#FF617CDA" FontWeight="Bold" Grid.Column="1"/>
+        <Label x:Name="lblAll" Content="All Players" HorizontalAlignment="Left" Margin="30,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16" Grid.Column="1"/>
+        <Label x:Name="lblSelected" Content="Selected Players" HorizontalAlignment="Left" Margin="480,99,0,0" VerticalAlignment="Top" Width="175" FontSize="16" Grid.Column="1"/>
+        <Button x:Name="btnAdd" Content="Add &gt; &gt;" HorizontalAlignment="Left" Margin="325,185,0,0" VerticalAlignment="Top" Width="75" Click="btnRight_Click" Grid.Column="1"/>
+        <Button x:Name="btnRemove" Content="&lt; &lt;Remove  " HorizontalAlignment="Left" Margin="325,255,0,0" VerticalAlignment="Top" Width="75" Click="btnLeft_Click" Grid.Column="1"/>
+        <Label x:Name="lblSpaces" Content="Spaces" HorizontalAlignment="Left" Margin="25,445,0,0" VerticalAlignment="Top" Width="140" Height="30" FontSize="16" Grid.Column="1"/>
+        <TextBlock x:Name="txtBlkSpaces" HorizontalAlignment="Left" Margin="205,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="150" FontSize="16" Grid.Column="1"/>
+        <Label x:Name="lblFormation" Content="Formation" HorizontalAlignment="Left" Margin="25,65,0,0" VerticalAlignment="Top" Width="85" FontSize="16" Grid.Column="1"/>
+        <ComboBox x:Name="cmbBxFormation" HorizontalAlignment="Left" Margin="125,70,0,0" VerticalAlignment="Top" Width="175" Grid.Column="1"/>
+        <TextBlock x:Name="txtBlkDescription" Grid.Column="1" HorizontalAlignment="Left" Margin="90,530,0,0" TextWrapping="Wrap" Text="warnings go here" VerticalAlignment="Top" Width="345" Height="56"/>
 
     </Grid>
 </Window>
